--- a/index.html
+++ b/index.html
@@ -1,80 +1,326 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Track your time effectively with Jeremy Robson's time tracking dashboard. Monitor daily, weekly, and monthly activities across work, play, study, exercise, social, and self-care categories with a user-friendly interface and detailed reports."
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <script defer src="script.js"></script>
+    <title>Frontend Mentor | Time tracking dashboard</title>
+  </head>
+  <body>
+    <main>
+      <div class="dashboard">
+        <div class="profile-card">
+          <!-- PROFILE -->
+          <div class="profile-card__info">
+            <img
+              class="profile-card__avatar"
+              src="images/image-jeremy.png"
+              alt="Jeremy Robson's avatar"
+            />
+            <div class="profile-card__details">
+              <p class="profile-card__report">Report for</p>
+              <h1 class="profile-card__name">Jeremy Robson</h1>
+            </div>
+          </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Time tracking dashboard</title>
+          <div class="profile-card__durations">
+            <button
+              id="daily"
+              class="profile-card__duration-option"
+              aria-pressed="true"
+              aria-label="View daily report"
+            >
+              Daily
+            </button>
+            <button
+              id="weekly"
+              class="profile-card__duration-option"
+              aria-pressed="false"
+              aria-label="View weekly report"
+            >
+              Weekly
+            </button>
+            <button
+              id="monthly"
+              class="profile-card__duration-option"
+              aria-pressed="false"
+              aria-label="View monthly report"
+            >
+              Monthly
+            </button>
+          </div>
+        </div>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <!-- WORK -->
+        <div class="activity activity--work">
+          <div class="activity__icon-wrapper light-orange">
+            <img
+              class="activity__icon"
+              src="images/icon-work.svg"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <div class="activity__details">
+            <div class="activity__title-wrap">
+              <h2 class="activity__title"></h2>
+              <button aria-label="More options for Work" class="activity__btn">
+                <svg
+                  class="activity__btn--svg"
+                  width="21"
+                  height="5"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    class="activity__btn--path"
+                    d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                    fill="#BBC0FF"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="activity__timeframe-wrap">
+              <p class="activity__current-time"></p>
+              <p class="activity__time-stamp">
+                <span class="activity__current-timeframe"></span> -
+                <span class="activity__previous-time"></span>
+              </p>
+            </div>
+          </div>
+        </div>
 
-  Report for
-  Jeremy Robson
+        <!-- PLAY -->
+        <div class="activity activity--play">
+          <div class="activity__icon-wrapper soft-blue">
+            <img
+              class="activity__icon"
+              src="images/icon-play.svg"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <div class="activity__details">
+            <div class="activity__title-wrap">
+              <h2 class="activity__title"></h2>
+              <button aria-label="More options for Play" class="activity__btn">
+                <svg
+                  class="activity__btn--svg"
+                  width="21"
+                  height="5"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    class="activity__btn--path"
+                    d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                    fill="#BBC0FF"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="activity__timeframe-wrap">
+              <p class="activity__current-time"></p>
+              <p class="activity__time-stamp">
+                <span class="activity__current-timeframe"></span> -
+                <span class="activity__previous-time"></span>
+              </p>
+            </div>
+          </div>
+        </div>
 
-  Daily
-  Weekly
-  Monthly
+        <!-- STUDY -->
+        <div class="activity activity--study">
+          <div class="activity__icon-wrapper light-red">
+            <img
+              class="activity__icon"
+              src="images/icon-study.svg"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <div class="activity__details">
+            <div class="activity__title-wrap">
+              <h2 class="activity__title"></h2>
+              <button aria-label="More options for Study" class="activity__btn">
+                <svg
+                  class="activity__btn--svg"
+                  width="21"
+                  height="5"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    class="activity__btn--path"
+                    d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                    fill="#BBC0FF"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="activity__timeframe-wrap">
+              <p class="activity__current-time"></p>
+              <p class="activity__time-stamp">
+                <span class="activity__current-timeframe"></span> -
+                <span class="activity__previous-time"></span>
+              </p>
+            </div>
+          </div>
+        </div>
 
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
+        <!-- EXERCISE -->
+        <div class="activity activity--exercise">
+          <div class="activity__icon-wrapper lime-green">
+            <img
+              class="activity__icon"
+              src="images/icon-exercise.svg"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <div class="activity__details">
+            <div class="activity__title-wrap">
+              <h2 class="activity__title"></h2>
+              <button
+                aria-label="More options for Exercise"
+                class="activity__btn"
+              >
+                <svg
+                  class="activity__btn--svg"
+                  width="21"
+                  height="5"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    class="activity__btn--path"
+                    d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                    fill="#BBC0FF"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="activity__timeframe-wrap">
+              <p class="activity__current-time"></p>
+              <p class="activity__time-stamp">
+                <span class="activity__current-timeframe"></span> -
+                <span class="activity__previous-time"></span>
+              </p>
+            </div>
+          </div>
+        </div>
 
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
+        <!-- SOCIAL -->
+        <div class="activity activity--social">
+          <div class="activity__icon-wrapper violet">
+            <img
+              class="activity__icon"
+              src="images/icon-social.svg"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <div class="activity__details">
+            <div class="activity__title-wrap">
+              <h2 class="activity__title"></h2>
+              <button
+                aria-label="More options for Social"
+                class="activity__btn"
+              >
+                <svg
+                  class="activity__btn--svg"
+                  width="21"
+                  height="5"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    class="activity__btn--path"
+                    d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                    fill="#BBC0FF"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="activity__timeframe-wrap">
+              <p class="activity__current-time"></p>
+              <!-- Values are empty. Will be populated by JavaScript. -->
+              <p class="activity__time-stamp">
+                <span class="activity__current-timeframe"></span> -
+                <span class="activity__previous-time">
+                  <!-- Values are empty. Will be populated by JavaScript. -->
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
 
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <!-- SELF-CARE -->
+        <div class="activity activity--self-care">
+          <div class="activity__icon-wrapper soft-orange">
+            <img
+              class="activity__icon"
+              src="images/icon-self-care.svg"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <div class="activity__details">
+            <div class="activity__title-wrap">
+              <h2 class="activity__title"></h2>
+              <button
+                aria-label="More options for Self Care"
+                class="activity__btn"
+              >
+                <svg
+                  class="activity__btn--svg"
+                  width="21"
+                  height="5"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    class="activity__btn--path"
+                    d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                    fill="#BBC0FF"
+                    fill-rule="evenodd"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="activity__timeframe-wrap">
+              <p class="activity__current-time"></p>
+              <p class="activity__time-stamp">
+                <span class="activity__current-timeframe"></span> -
+                <span class="activity__previous-time"></span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
